# access-control-fastapi-server

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_13_1415-2886c395c5dd_add_floors_table.py  2025_07_13_1423-e53b9ca7fa3a_add_access_rules_table.py  2025_07_13_1436-ab6718009c80_add_current_presence_table.py  2025_07_13_1439-531ff219b43a_add_user_role_association_table.py  2025_07_15_0333-452bb3a84036_add_unique_constaint_for_room_name_and_.py  2025_07_15_1515-942c56486a22_add_is_admin_column_to_users.py
src/: constants.py  logger.py  main.py
src/alembic/: env.py
src/api/: __init__.py  access_log.py  access_rule.py  building.py  current_presence.py  dependencies.py  dependepcies.py  floor.py  role.py  room.py  user.py
src/auth/: auth_schemas.py  controller.py  dependencies.py  exceptions.py  service.py  utils.py
src/core/: config.py
src/crud/: __init__.py  access_log.py  access_rule.py  building.py  current_presence.py  exceptions.py  floor.py  role.py  room.py  user.py
src/database/: core.py
src/exceptions/: exceptions.py  handlers.py
src/models/: __init__.py  access_log.py  access_rule.py  base.py  building.py  current_presence.py  floor.py  role.py  room.py  user.py  user_role_association.py
src/schemas/: access_log.py  access_rule.py  building.py  current_presence.py  floor.py  general_schemas.py  role.py  room.py  user.py
src/utils/: case_converter.py
tests/: conftest.py
tests/integration/: test_user_views.py
(+10 files in other folders)
